revision on setup.css for button issue on tablet/mobile

--- a/public/setup/css/setup.css
+++ b/public/setup/css/setup.css
@@ -743,3 +743,8 @@ input[type="text"] {
         text-align: left !important;
     }
 }
+@media (min-width: 320px) and (max-width: 640px) {
+    .setup-button-cont > a {
+        width: auto;
+    }
+}
